stderr
JudgeMan.java:114: error: missing return statement
    }
    ^
1 error
